# colima-tauri-ui

./: Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ConfigViewer.tsx  ContainerInspect.tsx  ContainerLogsDrawer.tsx  ContainerRow.tsx  ContainerStatsRow.tsx  DockerDesktopSection.tsx  Header.tsx  ImagePull.tsx  ImageRow.tsx  InstanceCard.tsx  LogDrawer.tsx  ModelSection.tsx  PruneConfirmModal.tsx  Settings.tsx  SetupGuide.tsx  Sidebar.tsx  StartModal.tsx  StatusBadge.tsx  VmStatsBar.tsx  VolumeRow.tsx
src/store/: index.ts  settings.ts
src/types/: index.ts
