[package]
name = "colima-manager"
version = "0.1.8"
description = "Colima Manager - macOS menu bar app for managing Colima"
authors = ["dmaman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "colima_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
window-vibrancy = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
